docker.io via proxy

--- a/runners/.env
+++ b/runners/.env
@@ -1,5 +1,4 @@
 all_proxy=socks5://127.0.0.1:7891
 http_proxy=socks5://127.0.0.1:7891
 https_proxy=socks5://127.0.0.1:7891
-no_proxy=docker.io,ccr.ccs.tencentyun.com
-
+no_proxy=ccr.ccs.tencentyun.com
