--- a/runners/.env
+++ b/runners/.env
@@ -1,4 +1,4 @@
-all_proxy=socks5://127.0.0.1:7891
-http_proxy=socks5://127.0.0.1:7891
-https_proxy=socks5://127.0.0.1:7891
+all_proxy=http://127.0.0.1:7890
+http_proxy=http://127.0.0.1:7890
+https_proxy=http://127.0.0.1:7890
 no_proxy=ccr.ccs.tencentyun.com
